<resources>
    <string name="app_name">Blood4You</string>

    <string name="action_settings">Settings</string>

    <string name="actionBarMain">Blood4You</string>
    <string name="actionBarList">Go donate!</string>

    <string name="actionBarWhere">Gdje donirati</string>
    <string name="actionBarAkcijeDarivanja">Akcije darivanja krvi</string>
    <string name="actionBarSjediste">Sjedište</string>
    <string name="actionBarRegistracija">Sign Up</string>
    <string name="actionBarLogin">Sign In</string>

    <string name="btnDonate">DONATE</string>
    <string name="btnInstructions">Donation instructions</string>
    <string name="btnLogin">Sign In</string>
    <string name="btnHelp">\?</string>
    <string name="btnReg">Reg</string>
    <string name="title_activity_instructions">Donation instructions</string>

    <string name="instructions">WHO CAN DONATE BLOOD?\n\n

        Blood can be donated by anyone who is healthy:\n
        &#8226;  Age: from 18 to 65 years old\n
        &#8226;  Body weight: above 55 kg, proportional to its weight\n
        &#8226;  Body temperature: not above 37 °C\n
        &#8226;  Blood pressure: systolic 100 to 180 mm Hg, diastolic 60 to 110 mm Hg\n
        &#8226;  Puls: 50 to 100 beats per minute\n\n\n

        WHO IS NOT ALLOWED TO DONATE BLOOD?\n\n
        Some blood donors  are permanently rejected because they can be infected and can be a great risk:\n
        &#8226;  alcohol and drug addicts\n
        &#8226;  men that have had sexual relationships with other men\n
        &#8226;  women and men that have had sexual relationships witch a prostitues\n
        &#8226;  people that are very often changing their sexual partners\n
        &#8226;  people that have been taking drugs via needles\n
        &#8226;  people that have been treated from STD-s\n
        &#8226;  people that are HIV-positive\n
        &#8226;  sexual partners of all above listed people\n\n\n

        HOW LONG WILL IT TAKE TO REPLENISH THE PINT OF BLOOD I DONATE?\n\n
        The plasma from your donation is replaced within about 24 hours. Red cells need about four to six weeks for complete replacement. That’s why at least eight weeks are required between whole blood donations.\n\n\n

        DOES THE RED CROSS PAY BLOOD DONORS?\n\n
        No. All Red Cross blood donors are volunteers. In fact, all blood collected for transfusion  must be from volunteer donors.\n\n\n


        BEFORE YOUR DONATION\n\n
        &#8226;  Maintain a healthy iron level in your diet by eating iron rich foods, such as red meat, fish, poultry, beans, spinach, iron-fortified cereals and raisins.\n
        &#8226;  Get a good night sleep.\n
        &#8226;  Drink an extra 16 oz. of water or nonalcoholic fluids before the donation.\n
        &#8226;  Eat a healthy meal before your donation. Avoid fatty foods, such as hamburgers, fries or ice cream before donating. (Fatty foods can affect the tests we do on your blood. If there is too much fat in your blood, your donation cannot be tested for infectious diseases and the blood will not be used for transfusion.)\n\n\n

        AFTER YOUR DONATION\n\n
        &#8226;  Take the time to enjoy a snack and a drink in the refreshments area immediately after donating.\n
        &#8226;  rink an extra four (8 ounce) glasses of liquids and avoid alcohol over the next 24 hours.\n
        &#8226;  Remove the wrap bandage (if you had one put on your arm) within the next hour.

        </string>


    <string name="naslovDialoga">Blood4You</string>

    <string name="opisAplikacije">Blood4You is an Android Application which
helps blood donors to track blood donating
events around the city. It reminds the user
when the blood donating cooldown is over and when
he is ready to donate blood again. Application stores
information about blood donations that took place in the past and shows
them to the user. Application uses push notifications and shows the location
of the next blood donating event. User can share and update his blood donating status
via social networks and invite his friends to take part in those activites too.</string>

    <string name="opisTima">Applications is made by team Trip:\nDenis Glad\nTimotej Jarc\nMatko Horvat</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>
    <string name="title_activity_list">List</string>


    <string name="toastNemaInterneta">Network is not available!</string>
    <string name="dialogGumbOk">Close</string>
    <string name="pogreskaPriDohvatu"></string>

    <string name="stalnaAkcija">Continuous action</string>
    <string name="datumUskoro">Date will be announced</string>
    <string name="radnoVrijeme">Whole day</string>
    <string name="errorDohvat">Handling data error</string>

</resources>
