<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".MainActivity"
    android:background="@mipmap/pozadina3_v2"
    android:id="@+id/glavna"
    android:alignmentMode="alignMargins">

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="250dp"
        android:layout_height="200dp"
        android:text="@string/btnDonate"
        android:id="@+id/btnDonate"
        android:background="@android:color/transparent"
        android:textSize="30dp"
        android:textColor="@color/textColor"
        android:layout_marginTop="120dp"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:clickable="true"
        android:onClick="clickHandlerBtnPopisAkcija"/>

    <Button
        android:layout_width="160dp"
        android:layout_height="45dp"
        android:text="@string/btnInstructions"
        android:id="@+id/btnWhyDonate"
        android:background="@color/btnColor"
        android:clickable="true"
        android:gravity="center"
        android:paddingLeft="8dp"
        android:paddingRight="8dp"
        android:textSize="10dp"
        android:width="165dp"
        android:onClick="clickHandlerInstructions"
        android:textColor="@color/textColor"
        android:layout_gravity="center"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="370dp" />

    <Button
        android:layout_width="160dp"
        android:layout_height="45dp"
        android:text="@string/btnLogin"
        android:id="@+id/btnLogin"
        android:background="@color/btnColor"
        android:clickable="true"
        android:textSize="10dp"
        android:gravity="center"
        android:textColor="@color/textColor"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="430dp" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btnHelp"
        android:id="@+id/btnHelp"
        android:background="@drawable/round_btn"
        android:clickable="true"
        android:onClick="clickHandlerHelp"
        android:textColor="@color/textColor"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true" />

    <!--    <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/imageButton"
            android:src="@drawable/round_btn"
            android:icon="@drawable/reg2_v2"
            android:clickable="true"
            android:layout_alignParentBottom="true"
            android:textColor="@color/textColor"
            android:layout_alignTop="@+id/btnHelp"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:layout_toEndOf="@+id/btnWhyDonate"
            android:layout_toRightOf="@+id/btnWhyDonate" />
 -->
        <Button
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btnReg"
            android:id="@+id/btnReg"
            android:background="@drawable/round_btn"
            android:clickable="true"
            android:textColor="@color/textColor"
            android:layout_below="@+id/btnWhyDonate"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true" />
            <!-- android:src="@drawable/reg2_v2"    -->


</RelativeLayout>
